Project "SAAS - Manajemen Pendidikan" {
  database_type: 'PostgreSQL'
  Note: 'Sistem Multi-Tenant dengan Logical Separation (Skema per Institusi)'
}

// ==========================================
// SCHEMA: PUBLIC (Global Master Data)
// Mengelola institusi, user sentral, dan langganan
// ==========================================

Table public.tenants {
  id uuid [pk]
  name varchar [note: 'Contoh: Pondok Pesantren Dar Al Tauhid, MISDT']
  schema_name varchar [unique, note: 'Nama skema di PostgreSQL, misal: tenant_ppdt']
  domain varchar [unique, note: 'Custom domain jika ada']
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp
}

Table public.users {
  id uuid [pk, note: 'Terkoneksi dengan ID dari Zitadel']
  email varchar [unique]
  phone_number varchar [unique, null]
  full_name varchar
  created_at timestamp
}

Table public.tenant_users {
  id uuid [pk]
  tenant_id uuid [ref: > public.tenants.id]
  user_id uuid [ref: > public.users.id]
  role varchar [note: 'Role global pada tenant, terintegrasi dengan Casbin']
  created_at timestamp
}

// ==========================================
// SCHEMA: TENANT (Di-generate per Institusi)
// Operasional unit. Fokus utama: Master Data GTK
// ==========================================

Table tenant_xxx.gtk {
  id uuid [pk]
  user_id uuid [unique, null, note: 'Relasi ke public.users jika GTK memiliki akses login sistem']
  nik varchar [unique, note: 'Nomor Induk Kependudukan']
  nuptk varchar [null, note: 'Opsional, mengakomodasi tenaga pendidik di lingkungan non-formal']
  full_name varchar
  gender varchar 
  birth_place varchar
  birth_date date
  employment_status varchar [note: 'Misal: Tetap, Honorer, Pengabdian']
  is_active boolean [default: true]
  joined_at date
  created_at timestamp
  updated_at timestamp
}

Table tenant_xxx.departments {
  id uuid [pk]
  name varchar [note: 'Misal: Kepesantrenan, Kurikulum, Keuangan']
  description text
}

Table tenant_xxx.gtk_positions {
  id uuid [pk]
  gtk_id uuid [ref: > tenant_xxx.gtk.id]
  department_id uuid [ref: > tenant_xxx.departments.id]
  title varchar [note: 'Misal: Kepala Pondok, Operator, Musyrif']
  is_primary boolean [default: false, note: 'Menandakan jabatan utama jika GTK merangkap tugas']
  start_date date
  end_date date [null]
}